# PaperTrace

./: .env.example  .gitignore  Makefile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/src/papertrace_api/: __init__.py  dependencies.py  main.py  schemas.py  uploads.py
apps/api/tests/: test_api.py  test_review_api.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analyses/[jobId]/evidence/: page.tsx
apps/web/components/: analysis-evidence-panel.tsx  analysis-evidence-workspace.tsx  analysis-form.tsx  analysis-lineage-graph.tsx  analysis-monaco-code-viewer.tsx  analysis-monaco-diff-viewer.tsx  analysis-results-workbench.tsx  analysis-review-claims-pane.tsx  analysis-review-diff-pane.tsx  analysis-review-file-tree.tsx  analysis-review-status-card.tsx  analysis-review-workspace.tsx
apps/web/lib/: analysis-review.ts  analysis-workbench.ts  api.ts
apps/web/tests/: home.spec.ts
apps/worker/src/papertrace_worker/: __init__.py  celery_app.py  tasks.py
apps/worker/tests/: test_tasks.py
fixtures/golden/: dpo.json  flash-attention.json  lora.json
fixtures/papers/: dpo.json  flash-attention.json  lora.json
fixtures/repos/: dpo.json  flash-attention.json  lora.json
infra/scripts/: check_env.py  dump_openapi.py  generate_contracts.sh  render_diff2html.mjs  run_e2e.sh
plan/progress/: 2026-03-20-progress-status-alignment.md  2026-03-21-code-diff-v2-execution-plan.md
